# price-comparison-agent

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  streamlit_app.py
src/: __init__.py
src/agent/: __init__.py  graph.py  state.py
src/agent/edges/: __init__.py
src/agent/nodes/: __init__.py  aggregator.py  cache_check.py  error_handler.py  normalizer.py  query_parser.py  router.py
src/agent/nodes/scrapers/: __init__.py  _runner.py  base.py  base_playwright.py  blinkit.py  zepto.py
src/api/: __init__.py  main.py  routes.py
src/infrastructure/: __init__.py  cache.py  http_client.py  observability.py  rate_limiter.py
src/models/: __init__.py  product.py  query.py
tests/: __init__.py
tests/integration/: __init__.py  test_agent.py
tests/unit/: __init__.py  test_aggregator.py  test_normalizer.py
